# koch-snowflake-scad

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: 100mm.scad  100mm.stl  100mm_hole.scad  100mm_hole.stl  50mm.scad  50mm.stl  50mm_hole.scad  50mm_hole.stl
koch_snowflake/: main.py
tests/: test_koch_snowflake.py
