[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "koch-snowflake"
version = "0.1.0"
description = "A python tool to create OpenScad Koch snowflakes"
authors = ["AnotherStranger <AnotherStranger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
openpyscad = "^0.5.0"
click = "^8.0.3"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
commitizen = "^2.20.3"
black = "^21.12b0"
mypy = "^0.921"

[tool.poetry.scripts]
koch_snowflake = "koch_snowflake.main:main"
